<resources>
    <string name="app_name">PrinceSchDailyPicture</string>
    <string name="photo_of_the_day_stub">Photo of the Day</string>
    <string name="search_in_wiki">Search in Wikipedia</string>
    <string name="wiki_helper_text">Look for something new</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="hd">HD</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="url_null_or_empty">URL is null or empty</string>
    <string name="default_chip">Default</string>
    <string name="entry_chip">Entry</string>
    <string name="choice_chip">Choice</string>
    <string name="action_chip">Action</string>
    <string name="filter_chip">Filter</string>
    <string name="background_color_chip">Background Color</string>
    <string name="ripple_color_chip">Ripple Color</string>
    <string name="chip_icon_chip">Chip icon</string>
    <string name="choice_a_chip">Choice A</string>
    <string name="choice_b_chip">Choice B</string>
    <string name="choice_c_chip">Choice C</string>
    <string name="set_main_theme">Set main Theme</string>
    <string name="set_marsian_theme">Set Marsian Theme</string>
    <string name="set_venerain_theme">Set Venerain Theme</string>
    <string name="select_date">Select Date</string>
    <string name="dailyVideo">Today we have video of the day! Click here!</string>
    
    <string name="empty_array">No photos for this day</string>
    <string name="test_behavior">Mars is the fourth planet from the Sun and the second-smallest planet in the Solar System, being larger than only Mercury. In English, Mars carries the name of the Roman god of war and is often referred to as the Red Planet.
        The latter refers to the effect of the iron oxide prevalent on Mars surface, which gives it a reddish appearance (as shown), that is distinctive among the astronomical bodies visible to the naked eye.[19]
        /n Mars is a terrestrial planet with a thin atmosphere, with surface features reminiscent of the impact craters of the Moon and the valleys, deserts and polar ice caps of Earth
        The days and seasons are comparable to those of Earth, because the rotational period as well as the tilt of the rotational axis relative to the ecliptic plane are similar. Mars is the site of Olympus Mons, the largest volcano and highest known mountain on any planet in the Solar System, and of Valles Marineris, one of the largest canyons in the Solar System.
        The smooth Borealis basin in the Northern Hemisphere covers 40% of the planet and may be a giant impact feature.
        Mars has two moons, Phobos and Deimos, which are small and irregularly shaped. These may be captured asteroids, similar to 5261 Eureka, a Mars trojan.</string>
    <string name="todo_list">TODO List</string>
    <string name="test_fragment">Test Fragment</string>
    <string name="done">Done</string>
</resources>