<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/def_padding">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/mainMotionStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutDescription="@xml/fragment_main_scene"
                app:layout_constraintBottom_toTopOf="@+id/chip_hd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/mainMotionButton"
                    android:layout_width="24pt"
                    android:layout_height="24pt"
                    android:src="@drawable/ic_magnifier"
                    android:scaleType="fitXY"
                    android:background="#00000000"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@id/input_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/input_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout"
                    android:layout_width="@dimen/null_dimen"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_in_wiki"
                    app:endIconCheckable="true"
                    app:endIconDrawable="@drawable/ic_search"
                    app:endIconMode="custom"
                    app:helperText="@string/wiki_helper_text"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/textColor" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.motion.widget.MotionLayout>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_hd"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hd"
                app:layout_constraintBottom_toTopOf="@id/image_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mainMotionStart"
                app:rippleColor="@color/teal_200" />

            <ru.geeekbrains.princeschdailypicture.utils.MyImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/photo_of_the_day_stub"
                app:layout_constraintBottom_toTopOf="@id/description_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_hd" />

            <TextView
                android:id="@+id/videoURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/description_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view" />

            <TextView
                android:id="@+id/description_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cinzel_decorative_black"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/def_padding"
                app:layout_constraintBottom_toTopOf="@id/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/videoURL" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/def_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_header" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/loadingLayout"
        layout="@layout/layout_loading" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>